0.4.2 - 新增帖子的功能新增标签选择